src/main/deployment/kubernetes/quarkus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-service
spec:
  selector:
    app: quarkus-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
