src/main/deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quarkus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - yourdomain.com # keep in mind
      secretName: quarkus-tls-secret
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: quarkus-service
                port:
                  number: 80
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: quarkus-service
                port:
                  number: 80
